# scanline-sstv

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
apps/cli/: CMakeLists.txt  audio_commands.cpp  audio_commands.hpp  audio_commands_stub.cpp  audio_diagnostic_commands.cpp  audio_diagnostic_commands.hpp  audio_text.cpp  audio_text.hpp  hil_commands.cpp  hil_commands.hpp  image_commands.cpp  image_commands.hpp  image_commands_stub.cpp  live_tx_commands.cpp  live_tx_commands.hpp  live_tx_signals.cpp  live_tx_signals.hpp  main.cpp  wav_commands.cpp  wav_commands.hpp
apps/gui/: CMakeLists.txt  LiveTransmitPanel.qml  Main.qml  audio_diagnostics_model.cpp  audio_diagnostics_model.hpp  audio_diagnostics_model_tests.cpp  live_transmit_model.cpp  live_transmit_model.hpp  live_transmit_model_tests.cpp  main.cpp  prepared_image_provider.cpp  prepared_image_provider.hpp  tx_editor_model.cpp  tx_editor_model.hpp  tx_editor_model_tests.cpp
docs/: ARCHITECTURE.md  DEPENDENCIES.md  MILESTONES.md  PLAN.md  PROTOCOLS.md  TESTING.md
docs/hil/: M2J_EVIDENCE_TEMPLATE.md  M2J_RUNBOOK.md  m2j-evidence-v1.schema.json  m2j-evidence-v1.template.json
docs/protocols/analogue/: fsk-id.md  martin-m1.md  pd-120.md  robot-36.md  scottie-s1.md
docs/protocols/rig/: flrig-xmlrpc.md  rigctld.md
include/sstv/analog/: fsk_id.hpp  luma_chroma.hpp  martin_m1.hpp  offline_tx.hpp  paired_luma_chroma.hpp  pd_120.hpp  robot_36.hpp  scottie_s1.hpp  sequential_rgb.hpp  vis.hpp
include/sstv/app/: hil_evidence.hpp  live_transmit.hpp  live_transmit_signals.hpp  offline_tx_editor.hpp  rendered_transmit.hpp  transmit_coordinator.hpp
include/sstv/audio/: audio_diagnostics.hpp  audio_discovery.hpp  audio_stream.hpp  sample_ring.hpp
include/sstv/core/: mode.hpp  rgb8_frame.hpp  timing.hpp  tone.hpp  version.hpp
include/sstv/dsp/: tone_renderer.hpp
include/sstv/image/: image.hpp
include/sstv/offline/: wav_inspector.hpp  wav_writer.hpp
include/sstv/rig/: flrig.hpp  ptt.hpp  rigctld.hpp
src/app/: CMakeLists.txt  hil_evidence.cpp  live_transmit.cpp  live_transmit_signals.cpp  offline_tx_editor.cpp  rendered_transmit.cpp  transmit_coordinator.cpp
src/audio/: CMakeLists.txt  audio_diagnostics.cpp  audio_discovery.cpp  audio_stream.cpp  miniaudio_adapter.cpp  miniaudio_adapter.hpp  miniaudio_implementation.cpp  miniaudio_stream_adapter.cpp  sample_ring.cpp
src/core/: CMakeLists.txt  fsk_id.cpp  luma_chroma.cpp  martin_m1.cpp  mode_registry.cpp  offline_tx.cpp  paired_luma_chroma.cpp  pd_120.cpp  rgb8_frame.cpp  robot_36.cpp  scottie_s1.cpp  sequential_rgb.cpp  timing.cpp  tone.cpp  tone_renderer.cpp  vis.cpp  wav_inspector.cpp  wav_writer.cpp
src/image/: CMakeLists.txt  image.cpp
src/rig/: CMakeLists.txt  flrig.cpp  flrig_codec.cpp  flrig_internal.hpp  loopback_tcp.cpp  loopback_tcp.hpp  ptt.cpp  rigctld.cpp  rigctld_codec.cpp  rigctld_internal.hpp
tests/: CMakeLists.txt  audio_diagnostics_tests.cpp  audio_host_smoke.cpp  audio_null_stream_test.cpp  audio_stream_tests.cpp  audio_tests.cpp  cli_audio_test.cmake  cli_encode_test.cmake  cli_hil_test.cmake  cli_image_test.cmake  cli_live_tx_disabled_test.cmake  cli_live_tx_noninteractive_test.cmake  core_smoke.cpp  image_tests.cpp  m1a_tests.cpp  m1c_tests.cpp  m1d_tests.cpp  m1e_tests.cpp  m1f_tests.cpp  m1g_app_tests.cpp  m2d_transmit_tests.cpp  m2e_flrig_tests.cpp  m2f_rigctld_tests.cpp  m2g_null_transmit_test.cpp  m2g_rendered_transmit_tests.cpp  m2h_live_transmit_tests.cpp  m2h_signal_tests.cpp  m2i_live_service_tests.cpp  m2j_b1_tests.cpp  m2j_hil_tests.cpp
tests/fixtures/hil/: README.md  generate_fixture.py
tests/fixtures/image/: README.md  SHA256SUMS  generate_fixtures.py  marker.tiff
tests/vectors/analogue/fsk-id/: README.md  generate_reference.py  reference.json
tests/vectors/analogue/martin-m1/: README.md  generate_reference.py  reference.json
tests/vectors/analogue/pd-120/: README.md  generate_reference.py  reference.json
tests/vectors/analogue/robot-36/: README.md  generate_reference.py  reference.json
tests/vectors/analogue/scottie-s1/: README.md  generate_reference.py  reference.json
